footer alignment media query fix

--- a/meds/src/App.css
+++ b/meds/src/App.css
@@ -429,7 +429,6 @@ p {
 
   .footer {
     display: flex;
-    position: absolute;
     bottom: 0cap;
     left: 25vmin;
     justify-content: center;
